# akp-python-app

./: Dockerfile  README.md
.github/workflows/: build-deploy.yml
akp-python-cicd/: pyproject.toml
akp_python_cicd/: app.py
tests/: __init__.py
