[tool.poetry]
name = "akp-python-cicd"
version = "0.1.0"
description = ""
authors = ["AshisPadhi <ashispadhi08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
